# AMUman

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  dockerfile  entrypoint.sh  flake.nix  hystersis_loops_swap_v2 copy.ipynb  justfile  pyproject.toml  requirements.txt
backend/: .env..example  Dockerfile  dockerfile  entrypoint.sh  flake.nix  justfile  manage.py  pyproject.toml  requirements.txt  run_mode.py
backend/amudmin/: asgi.py  settings.py  settings_client.py  settings_master.py  settings_node.py  urls.py  wsgi.py
backend/amuman/: asgi.py  celery.py  routing.py  settings.py  settings_client.py  settings_manager.py  settings_master.py  settings_node.py  urls.py
backend/common_models/: apps.py  models.py
backend/common_models/migrations/: 0001_initial.py  0002_alter_gpus_status_alter_nodes_status_and_more.py  0002_task_submit_time_task_user.py  0003_alter_task_est.py  0003_nodes_gpus.py  0004_gpus_no_alter_task_gpu_partition_alter_task_priority.py  0004_nodes_number_of_gpus.py  0005_alter_task_path.py  0005_gpus_last_update.py  0006_gpus_gpu_util_gpus_is_running_amumax.py  0006_task_error_task_output.py  0007_alter_task_error_alter_task_output.py  0007_gpus_gpu_id.py  0008_rename_nodeid_gpus_node_id.py  0008_task_flags.py  0009_task_est_task_gpu_partition_alter_task_id.py  (+10 more)
backend/manager/: __init__.py  api.py  apps.py  consumers.py  routing.py  scheduler.py  serializers.py  tasks.py  urls.py  views.py
backend/master/: active_connections.py  consumers.py  models.py  serializers.py  urls.py  views.py
backend/node/: JobProcesss.py  TaskManager.py  apps.py  consumers.py  job_process.py  models.py  node_websocket_client.py  routing.py  serializers.py  singleton.py  tasks.py  urls.py  views.py  webchannel.py  ws_client.py
cli/: dev.dockerfile  entrypoint.sh  justfile  pyproject.toml
cli/amuman_cli/: main.py
cli/tests/: test_amuman_cli.py  test_init_config.py  test_sanitize_path.py
node/: Containerfile  Dockerfile  config.json  dev.dockerfile  dockerfile  entrypoint.sh  install_script.ps1  justfile  pyproject.toml
node/amuman_node/: api.py  bench.mx3  bench_error.mx3  config.py  gpu.py  gpu_monitor.py  job.py  job_manager.py  job_processs.py  main.py  node.py  node_websocket_client.py  task.py  task_manager.py  websockets.py  ws_messages.py
(+248 files in other folders)
