[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name = "Mathieu Moalic", email = "matmoa@amu.edu.pl" },
  { name = "Mateusz Zelent", email = "mateusz.zelent@amu.edu.pl" },
]
name = "amuman-cli"
requires-python = ">=3.8"
dependencies = [
    "httpx==0.26.0",
    "typer==0.9.0",
    "rich==13.7.0",
    "xdg-base-dirs==6.0.1",
    "toml==0.10.2",
]
version = "0.0.1"

[project.scripts]
amuman-cli="amuman_cli.main:entrypoint"

[tool.mypy]
ignore_missing_imports = true
